Change meta tags to try and stop horizontal scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,6 @@
 
 body{
     height: 100vh;
-    position: relative;
-    /* min-height: 100%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,6 +27,11 @@ body{
    
 
    
+}
+body::before{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
 }
 
 h1{
